--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: BebasNeue;
-    src: url("../font/BebasNeue.otf");
-}
-@font-face {
-    font-family: SRPG;
-    src: url("../font/SRPGF.ttf");
-}
-
-
 /*
 html5doctor.com Reset Stylesheet
 v1.6.1
@@ -120,429 +110,82 @@ input, select {
     list-style: none;
 }
 body{
-    background-color: #FFFFFF;
+    background-color: #ebeff3 !important;
 }
 header {
-    background: linear-gradient(to bottom, #eb0029, #685454);
-    padding: 10px
+    background: #eb0029;
+    padding: 10px 10px 0;
 }
 header h1{
-    font-family: SRPG;
-    font-size: 36px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+    color: #FFF;
+    margin-bottom: 5px;
+}
+header p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
     font-weight: 100;
-    color: #ff63d8;
-    text-shadow: #51FE08 2px 2px;
+    color: #FFF;
+    margin: 0px;
+}
+nav ul{
+    padding: 0;
     display: block;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
     text-align: center;
-    padding: 10px 0;
 }
-header nav ul{
-    display: block;
-    margin: 0 auto;
-    width: fit-content;
+
+.horizontal-align {
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-evenly;
 }
-header nav ul li{
-    display: inline-block;
-    padding: 0 15px;
-}
-header nav ul li a{
-    font-family: SRPG;
-    font-size: 20px;
-    font-weight: 100;
-    color: #ff63d8;
+.right-align{
+    float: right;
 }
 .container{
     width: 100%;
     height: 100%;
 }
-footer{
-    background-color: #000000;
-    width: 100%;
-    height: 30px;
-    bottom: 0px;
-    position: fixed;
+.menu{
+    background-color: #FFF;
+    padding: 0 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-footer ul{
-    padding: 5px 5px;
+.menu input[type="radio"]{
+    display: none;
 }
-footer ul li{
-    font-family: SRPG;
-    letter-spacing: 1px;
+.menu input[type="radio"] p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 10px;
+    font-weight: 500;
     color: #FFF;
-    font-weight: 100;
+}
+.menu input[type="radios"]:hover {
+    color: #FFF;
+    background-color: #27313a; 
+}
+.card{
+    width: calc(100vw - 30px);
+    height: fit-content;
+    margin: 15px;
+    padding: 15px;
+}
+.card h2{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+    font-weight: 500;
+    color: black;
 }
-main{
-    width: 100%;
-    height: calc(100vh - 120px);
-}
-.banner{
-    max-width: 768px;
-    width: 100%;    
-    height: auto;
-}
-.fondo{
-    max-width: 2560px;
-    width: 100%;
-    height: auto;
-    bottom: 30px;
-    left: 0px;
-    position: fixed;
-}
-
-.container-reload{
-    width: 100%;
-    height: calc(100vh - 284px);
-    display: table;
-}
-.vertical-center{
-    display: table-cell;
-    vertical-align: middle;
-}
-.horizontal-center{
-    width: 100%;
-}
-.cont{
-    width: fit-content;
-    height: 100px;
-    display: block;
-    margin: 0 auto;
-}
-.cont-uno{
-    float:left;
-    width: 60%; 
-    margin: 0 2%;
-}
-.cont-dos{
-    float:left;
-    width: 34%; 
-    margin-right: 2%;
-}
-.cont-tres{
-    float:left;
-    width: 40%; 
-    margin: 0 2%;
-}
-.cont-cuatro{
-    float:left;
-    width: 44%; 
-    margin-right: 0 2%;
-}
-main h1 {
-    font-family: BebasNeue;
-    color: #FFF;
-    font-weight: 100;
-    font-size: 25px;
-}
-.container-reload h1 {
-    font-family: BebasNeue;
-    color: #FFF;
-    font-weight: 100;
-    font-size: 30px;
-    text-align: center;
-}
-main h2{
-    width: fit-content;
-    font-family: BebasNeue;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
-    float: right;
-    line-height: 70px;
-    color: #454545;
-    letter-spacing: 1px;
-}
-.container-reload h2{
-    width: fit-content;
-    font-family: BebasNeue;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
-    float: right;
-    line-height: 55px;
-    color: #454545;
-    letter-spacing: 1px;
-}
-main h3{
-    width: fit-content;
-    display: block;
-    margin: 0 auto;
-    font-family: BebasNeue;
-    font-style: normal;
-    font-weight: 200;
-    font-size: 25px;
-    line-height: 40px;
-    color: #454545;
-}
-.btn1 {
-    font-family: SRPG;
-    letter-spacing: 1px;
-    color: #FFF;
-    font-weight: 100;
-    font-size: 17px;
-    background-color: #454645;
-    height: fit-content;
-    width: 100%;
-    padding: 5px;
-    margin: 5px 0;
-    color: white; 
-    border-radius: 10px;
-    float: left;
-    box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
-             0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
-}
-
-.btn1:hover {
-    background-color: white;
-    transition: 1s;
-    color: #454645;
-    box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
-             0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
-}
-.container-reload .btn1 {
-    font-family: SRPG;
-    letter-spacing: 1px;
-    color: #FFF;
-    font-weight: 100;
-    font-size: 17px;
-    background-color: #454645;
-    height: fit-content;
-    width: 100%;
-    padding: 5px;
-    margin: 5px 0;
-    color: white; 
-    border-radius: 10px;
-    float: left;
-    box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
-             0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
-}
-
-.container-reload .btn1:hover {
-    background-color: white;
-    transition: 1s;
-    color: #454645;
-    box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
-             0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
-}
-.txt{
-    width: 100%;
-    height: auto;
-    padding: 7px 5px;
-    margin: 10px 0;
-    border: 2px solid #000000;
-    border-radius: 5px;
-    font-family: Arial;
-    font-weight: 100;
+.card .info{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
-    text-align: left;
-}
-@media only screen and (min-width: 321px) {
-    .container{
-        height: calc(100vh - 510px);
-    }
-    .container-reload{
-        height: calc(100vh - 313px);
-    }
-    main h1 {
-        font-size: 30px;
-    }
-    .container-reload h1 {
-        font-size: 35px;
-    }
-    .btn1 {
-        font-size: 20px;
-        margin: 7px 0;
-    }
-    .container-reload .btn1 {
-        font-size: 20px;
-        margin: 7px 0;
-    }
-}
-@media only screen and (min-width: 376px) {
-    .container{
-        height: calc(100vh - 562px);
-    }
-    .container-reload{
-        height: calc(100vh - 339px);
-    }
-    main h1 {
-        font-size: 35px;
-    }
-    .btn1 {
-        margin: 10px 0;
-    }
-}
-@media only screen and (min-width: 426px) {
-    main{
-        height: calc(100vh - 86px - 30px - 403px);
-    }
-    .container-reload{
-        height: calc(100vh - 400px);
-    }
-    main h1 {
-        font-size: 35px;
-    }
-    .fondo{
-        display: none;
-        height: 0px;
-    }
-    .cont{
-        height: 50px;
-        width: 300px;
-    }
-    .cont-uno{
-        float: none;
-        width: 96%;
-        margin: 0 2% 20px;
-    }
-    .cont-dos{
-        float: none;
-        width: 96%;
-        margin: 0 2%;
-    }
-    .cont-tres{
-        width: 20%;
-        margin: 0;
-        margin-left: 15%;
-        margin-right: 2%;
-    }
-    .cont-cuatro{
-        width: 40%;
-        margin-right: 23%;
-    }
-    .container .cont ul li{
-        display: inline-block;
-    }
-    .btn1 {
-        height: 100px;
-        font-size: 30px;
-        margin: 15px 0;
-    } 
-    
-}
-@media only screen and (min-width: 769px) {
-    .banner{
-        max-width: 500px;
-        top: 86px;
-        right: 0;
-        position: absolute;
-    }
-    .container{
-        margin-top: 403px;
-    }
-    .container-reload{
-        margin-top: 280px;
-    }
-    
-    .cont-tres{
-        width: 115px;
-        margin: 0;
-        margin-right: 20px;
-    }
-    .cont-cuatro{
-        width: 321px;
-        margin: 0;
-    }
-    .horizontal-center{
-        width: auto;
-        display: flex;
-        justify-content: center;
-    }
-}
-@media only screen and (min-width: 1441px){
-    main{
-        height: calc(100vh - 210px - 80px - 945px);
-        margin-top: 945px;
-    }
-    header {
-        padding-bottom: 20px;
-    }
-    header h1{
-        font-size: 120px;
-        text-shadow: #51FE08 7px 7px;
-        padding: 20px 0;
-    }
-    header nav ul li{
-        padding: 0 30px;
-    }
-    header nav ul li a{
-        font-size: 70px;
-    }
-    footer{
-        height: 70px;
-    }
-    footer ul{
-        padding: 10px;
-    }
-    footer ul li{
-        font-family: SRPG;
-        letter-spacing: 1px;
-        color: #FFF;
-        font-weight: 100;
-        font-size: 60px;
-    }
-    .banner{
-        max-width: 1800px;
-        top: 250px;
-    }
-    .container{
-        height: 100%;
-    }
-    .container-reload{
-        height: 100%;
-    }
-    .cont{
-        width: 1000px;
-    }
-    .cont-cuatro{
-        width: 700px;
-        margin: 0;
-    }
-    main h1 {
-        font-size: 120px;
-    }
-    .container-reload h1 {
-        font-size: 120px;
-    }
-    main h2{
-        font-size: 25px;
-        line-height: 70px;
-    }
-    .container-reload h2{
-        font-size: 90px;
-        line-height: 140px;
-    }
-    main h3{
-        font-size: 70px;
-        line-height: 40px;
-    }
-    .btn1 {
-        height: auto;
-        font-size: 100px;
-        padding: 20px;
-        margin: 30px 0;
-    }
-    .container-reload .btn1 {
-        font-size: 100px;
-        padding: 10px;
-        margin: 20px 0;
-        border-radius: 20px;
-    }
-    
-    .txt{
-        padding: 7px 10px;
-        margin: 18px 0;
-        border: 4px solid #000000;
-        border-radius: 15px;
-        font-size: 70px;
-    }
+    font-weight: 100;
+    margin-bottom: 15px;
+    color: blue;
 }
